--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//base/admin.py=utf-8
 encoding//base/decorators.py=utf-8
+encoding//base/models.py=utf-8
 encoding//base/views.py=utf-8
 encoding//japi/views.py=utf-8
